<resources>
    <string name="app_name">EMV L3 APP</string>
    <string name="menu0">菜单1</string>
    <string name="menu1">菜单2</string>
    <string name="menu2">菜单3</string>
    <string name="button_startTrans">开始交易</string>
    <string name="button_vireChecksum">内核版本</string>
    <string name="button_paramManage">参数管理</string>
    <string name="button_autoTest">自动测试</string>
    <string name="button_communicateType">通讯方式</string>
    <string name="button_transLog">交易日志</string>
    <string name="button_version">版本信息</string>
    <string name="button_addTestAID">添加测试AID</string>
    <string name="button_sendTCP">发送TCP</string>
    <string name="button_outcome">Outcome</string>
    <string name="button_apdu">APDU</string>
    <string name="button_random">随机数测试</string>
    <string name="button_sha1">SHA1测试</string>
    <string name="button_display">Display</string>
    <string name="select_commu_type_title">请选择后台通讯方式</string>
    <string name="select_serial_port">串口</string>
    <string name="select_network">网络</string>
    <string name="title_inputpin">请输入密码</string>
    <string name="button_downloadaid">下载Config</string>
    <string name="button_downloadcapk">下载CAPK</string>
    <string name="button_downloadtermparam">下载终端参数</string>
    <string name="button_downloadexcpfile">下载异常文件</string>
    <string name="button_downloadrevokey">下载回收公钥</string>
    <string name="button_downloaddrl">下载DRL</string>
    <string name="title_inputipaddr">请输入后台IP地址</string>
    <string name="button_confirm">确认</string>
    <string name="button_cancel">取消</string>
    <string name="text_ipaddr">IP地址</string>
    <string name="text_port">端口号</string>
    <string name="text_input_amount">请输入交易金额，如无则默认0.00</string>
    <string name="text_input_amount_oth">请输入其他金额,如无则不填</string>
    <string name="text_input_transtype">请输入交易类型，默认00</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="prompt_exit">确定要退出应用吗</string>
    <string name="clear">清除</string>
    <string name="exit">退出</string>
    <string name="bypass">跳过</string>
</resources>