<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true">

        <Button
            android:text="@string/button_sendTCP"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            android:id="@+id/button_sendtcp">
        </Button>

        <Button
            android:text="@string/button_outcome"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            android:id="@+id/button_outcome_test">
        </Button>

        <Button
            android:text="@string/button_apdu"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            android:id="@+id/button_apdu_test">
        </Button>

        <Button
            android:text="@string/button_random"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            android:id="@+id/button_random_test">
        </Button>
    </GridLayout>
</LinearLayout>