<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:baselineAligned="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_inputipaddr"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/textViewIPAddr">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:gravity="right|bottom"
                    android:background="@drawable/editext_selector"
                    android:hint="@string/text_ipaddr"
                    android:id="@+id/editTextIpAddr">
                </EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:gravity="right|bottom"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="number"
                    android:background="@drawable/editext_selector"
                    android:hint="@string/text_port"
                    android:id="@+id/editTextIPPort">
                </EditText>
            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="1"
                android:layout_gravity="center_horizontal">

                <Button
                    android:text="@string/button_confirm"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:id="@+id/button_confirm"
                    android:textSize="30sp">
                </Button>

                <Button
                    android:text="@string/button_cancel"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:id="@+id/button_cancel"
                    android:textSize="30sp">
                </Button>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>