<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_commu_type_title"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/textView_titleCommu">
        </TextView>
    </LinearLayout>

    <!-- GridLayout 现在位于 LinearLayout 下方 -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_below="@id/layout_title"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp">
        <Button
            android:text="@string/select_serial_port"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:id="@+id/button_serial">
        </Button>

        <Button
            android:text="@string/select_network"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:id="@+id/button_tcp">
        </Button>
    </GridLayout>

</RelativeLayout>
